--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 未知国家-1.41MB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
+  - {name: 🇺🇸 美国-454.9KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20719, type: trojan, password: 46ceba76-28b9-37df-8b08-b288e75aa646, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇭🇰 香港-1.74MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6003, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.09MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-451.2KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20721, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-297.9KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20725, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20723, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-398.8KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.42MB/s(Youtube:不良林), server: 116.129.254.65, port: 63088, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 116.129.254.65}}
-  - {name: 🇯🇵 日本-1.79MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-1.36MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇳 中国-224.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-869.3KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20724, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-403.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-467.6KB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 未知国家-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-454.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-398.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-869.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-403.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 未知国家-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-454.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-398.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-869.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-403.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 未知国家-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-454.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-398.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-869.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-403.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 未知国家-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-454.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-398.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-869.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-403.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 未知国家-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-454.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-398.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-869.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-403.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 未知国家-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-454.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-398.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-869.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-403.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 未知国家-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-454.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-398.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-869.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-403.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
