--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.42MB/s(Youtube:不良林), server: 116.129.254.65, port: 63088, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 116.129.254.65}}
-  - {name: 🇷🇺 俄罗斯联邦-588.1KB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ru.2046.gq, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-312.6KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20725, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 未知国家-3.40MB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
+  - {name: 🇯🇵 日本-1.94MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-209.3KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20721, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.19MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇺🇸 美国-643.8KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20725, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.73MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-484.1KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20718, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇬🇧 英国-1.29MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-592.3KB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-312.6KB/s(Youtube:不良林)
-      - 未知国家-3.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-209.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-643.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-592.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-312.6KB/s(Youtube:不良林)
-      - 未知国家-3.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-209.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-643.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-592.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-312.6KB/s(Youtube:不良林)
-      - 未知国家-3.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-209.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-643.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-592.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-312.6KB/s(Youtube:不良林)
-      - 未知国家-3.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-209.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-643.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-592.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-312.6KB/s(Youtube:不良林)
-      - 未知国家-3.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-209.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-643.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-592.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-312.6KB/s(Youtube:不良林)
-      - 未知国家-3.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-209.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-643.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-592.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-312.6KB/s(Youtube:不良林)
-      - 未知国家-3.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-209.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-643.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-592.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
